Add food images and latest UI improvements

--- a/MosBurger/reports.html
+++ b/MosBurger/reports.html
@@ -109,6 +109,12 @@
                             </select>
                             <select id="salesYear" class="filter-select"></select>
                         </div>
+                        <div class="card-actions">
+                            <button class="btn btn-outline-modern export-btn" id="exportSalesBtn">
+                                <i class="fas fa-download"></i>
+                                <span>Export</span>
+                            </button>
+                        </div>
                     </div>
                     <div class="chart-container premium-chart" id="salesChart">
                         <canvas id="salesChartCanvas" width="400" height="200"></canvas>
@@ -143,6 +149,12 @@
                                 <option value="all">All Time</option>
                             </select>
                         </div>
+                        <div class="card-actions">
+                            <button class="btn btn-outline-modern export-btn" id="exportCustomersBtn">
+                                <i class="fas fa-download"></i>
+                                <span>Export</span>
+                            </button>
+                        </div>
                     </div>
                     <div class="premium-table-wrapper">
                         <table class="premium-table ranking-table" id="topCustomersTable">
@@ -175,6 +187,12 @@
                                 <option value="all">All Time</option>
                             </select>
                         </div>
+                        <div class="card-actions">
+                            <button class="btn btn-outline-modern export-btn" id="exportItemsBtn">
+                                <i class="fas fa-download"></i>
+                                <span>Export</span>
+                            </button>
+                        </div>
                     </div>
                     <div class="premium-table-wrapper">
                         <table class="premium-table items-table" id="popularItemsTable">
@@ -202,6 +220,12 @@
                         </div>
                         <div class="card-filters">
                             <select id="annualYear" class="filter-select"></select>
+                        </div>
+                        <div class="card-actions">
+                            <button class="btn btn-outline-modern export-btn" id="exportAnnualBtn">
+                                <i class="fas fa-download"></i>
+                                <span>Export</span>
+                            </button>
                         </div>
                     </div>
                     <div class="chart-container premium-chart" id="annualChart">
