--- a/MosBurger/reports.html
+++ b/MosBurger/reports.html
@@ -15,7 +15,7 @@
     <div class="app-container">
         <nav class="sidebar">
             <div class="sidebar-header">
-                <img src="https://images.unsplash.com/photo-1618160702438-9b02ab6515c9?w=50&h=50&fit=crop&crop=center" alt="Logo" class="nav-logo">
+                <img src="../items/MosBurgerLogo.jpg" alt="Logo" class="nav-logo">
                 <h2>MOS Burgers</h2>
             </div>
             <ul class="nav-menu">
